tests/golden/parse_errors/function_type_missing_return.cd
let f: fun(number): = fun (x: number): number {
  return x;
};
